2008-11-22  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (check_toggled):
	Now root partition cannot be unselected.


2008-11-22  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c:
	Fix excluded locations sanity check.
	(#560476)	
	
2008-11-22  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab.c: (baobab_is_excluded_location):
	Fix logic bug that made it return always FALSE.

2008-10-26  Cosimo Cecchi  <cosimoc@gnome.org>

        * src/baobab-utils.c:
        (baobab_help_display):
        Plug a mem leak.

2008-10-26  Cosimo Cecchi  <cosimoc@gnome.org>

        * src/Makefile.am:
        * src/baobab-mount-operation.c: Removed.
        * src/baobab-mount-operation.h: Removed.
        * src/baobab-remote-connect-dialog.c:
        (connect_server_dialog_present_uri):
        * src/baobab-utils.c:
        (baobab_help_display):
        * src/baobab.c:
        (main):
	Drop libgnome dependency (#557264).

2008-10-26  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-scan.c:
	* src/baobab-scan.h:
	* src/baobab-utils.c: (baobab_check_dir), (is_virtual_filesystem):
	* src/baobab-utils.h:
	Fixes #557226: scanning /sys folder

2008-10-04  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-treeview.c: 
	check if folder exists. Patch by Kristian Rumberg.
	Fixes #554996

2008-10-04  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-utils.c: small cleanup patch by Kristian Rumberg.

2008-09-11  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-remote-connect-dialog.c:
	  Translators warning added

2008-09-01  Fabio Marzocca  <thesaltydog@gmail.com>

	* src/baobab-prefs.c: (fill_props_model):
	skip gvfs fuse mounts in Preferences dialog.

2008-08-30  Paolo Borelli  <pborelli@katamail.com>

	* src/baobab-scan.c: Skip all subdirs of ~/.gvfs in order to avoid
	scanning gvfs fuse mounts as local files. It would be cool to have
	a less hackish way to do it. Fixes #533878

2008-08-04  Paolo Borelli  <pborelli@katamail.com>
