@@ -1,3 +1,12 @@
+2008-12-03  Cosimo Cecchi  <cosimoc@gnome.org>
+
+	* src/baobab-cell-renderer-progress.h:
+	* src/baobab-chart.h:
+	* src/baobab-remote-connect-dialog.h:
+	* src/gedit-spinner.c:
+	* src/gedit-spinner.h:
+	Use single GTK+ includes. Patch by Maxim Ermilov (#561257).
+
 2008-11-22  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-prefs.c: (check_toggled):
